<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F4F4F4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="48dp">

                <TextView
                    android:id="@+id/label1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="70dp"
                    android:background="#dad2d8"
                    android:text="@string/etiquetaBienvenido"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#14213D"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputLoginUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="#6c757d"
                    android:hint="@string/hintUsuario"
                    android:paddingHorizontal="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#6c757d" />

                <EditText
                    android:id="@+id/inputLoginContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="#6c757d"
                    android:ems="10"
                    android:hint="@string/hintContrasena"
                    android:inputType="textPassword"
                    android:paddingHorizontal="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#6c757d" />

                <Button
                    android:id="@+id/btnIniciarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="100dp"
                    android:backgroundTint="#000000"
                    android:onClick="iniciarSesion"
                    android:text="@string/btnIniciarSesion"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/etiquetaCuenta"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#5C5B5E" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#0f8b8d"
                    android:onClick="pantallaRegistro"
                    android:text="@string/btnRegistrate"
                    android:textSize="14sp" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>