<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:background="#9dbebb"
            android:text="@string/etiquetaTitulo2"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#14213D"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="30dp">

                <TextView
                    android:id="@+id/label3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:text="@string/etiquetaCandidatos"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/inputCandidatos"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="#6c757d"
                    android:ems="10"
                    android:hint="@string/hintCandidatos"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#6C757D" />

                <TextView
                    android:id="@+id/label4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:text="@string/etiquetaVotos"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/inputVotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#6c757d"
                    android:ems="10"
                    android:hint="@string/hintVotos"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingHorizontal="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#6C757D" />

                <Button
                    android:id="@+id/btnCalcularVotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="#857C8C"
                    android:drawableLeft="@android:drawable/ic_menu_send"
                    android:drawableTint="#ec9a29"
                    android:onClick="calculoVotos"
                    android:text="@string/btnCalcular"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="#b2967d"
                    android:text="@string/etiquetaResultados"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/etiquetaResultadoVotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnMenu"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:drawableLeft="?attr/homeAsUpIndicator"
                    android:drawableTint="#FFFFFF"
                    android:onClick="pantallaMenu"
                    android:text="@string/btnMenu"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>