<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuarios">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F4F4F4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="48dp">

                <TextView
                    android:id="@+id/label1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="60dp"
                    android:background="#dad2d8"
                    android:text="@string/etiquetaRegistro"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#14213D"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#6C757D"
                    android:hint="@string/hintUsuario"
                    android:paddingHorizontal="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#6C757D" />

                <EditText
                    android:id="@+id/inputContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#6C757D"
                    android:ems="10"
                    android:hint="@string/hintContrasena"
                    android:inputType="textPassword"
                    android:paddingHorizontal="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#6C757D" />

                <EditText
                    android:id="@+id/inputReContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="#6C757D"
                    android:ems="10"
                    android:hint="@string/hintReContrasena"
                    android:inputType="textPassword"
                    android:paddingHorizontal="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#6C757D" />

                <Button
                    android:id="@+id/btnIniciarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="100dp"
                    android:backgroundTint="#0f8b8d"
                    android:drawableLeft="@android:drawable/ic_menu_send"
                    android:drawableTint="#FFFFFF"
                    android:onClick="registrarUsuario"
                    android:text="@string/btnRegistrar"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#000000"
                    android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
                    android:drawableTint="#FFFFFF"
                    android:onClick="finalizarActividad"
                    android:text="@string/btnCancelar"
                    android:textSize="14sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>